[tool.poetry]
name = "nonebot-plugin-cooldown"
version = "1.0.0"
description = "A Cooldown Event Managing Plugin for Nonebot 2"
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-alpha.8"
apscheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
